--- a/prod/kustomization.yaml
+++ b/prod/kustomization.yaml
@@ -8,5 +8,5 @@ patchesStrategicMerge:
 - ./deployment-patch.yaml
 
 images:
-- name: alexmt/argocd-demo
+- name: nynamesandesh/argocd-demo
   newTag: 3824e3ce01af4947d4375c2d8fb22159d12e5c04
