Publish new version

--- a/qa/kustomization.yaml
+++ b/qa/kustomization.yaml
@@ -1,12 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-- ../base
 
 patchesStrategicMerge:
 - ./deployment-patch.yaml
 
 images:
+- name: demo
+  newName: mynamesandesh/argocd-demo
+  newTag: 07552083fd409d66ada5fa41330df522aa173abf
 - name: mynamesandesh/argocd-demo
   newTag: 3824e3ce01af4947d4375c2d8fb22159d12e5c04
+resources:
+- ../base
