--- a/prod/kustomization.yaml
+++ b/prod/kustomization.yaml
@@ -1,9 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-- ../base
 
 patchesStrategicMerge:
 - ./deployment-patch.yaml
-
+resources:
+- ../base
+images:
+- name: demo
+  newName: mynamesandesh/argocd-demo
+  newTag: 24262b2b86f53c1339f0d13028484c26a9eb46a3
