changes in qa folder

--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -15,5 +15,7 @@ spec:
         app: demo
     spec:
       containers:
+      - image: mynamesandesh/argocd-demo:${env.GIT_COMMIT}
+        name: demo
         ports:
         - containerPort: 8080
