--- a/qa/kustomization.yaml
+++ b/qa/kustomization.yaml
@@ -7,4 +7,6 @@ patchesStrategicMerge:
 
 resources:
 - ../base
-
+images:
+- name: mynamesandesh/argocd-demo
+  newTag: 904a7dacbe280ee388f38a6c9cadd4a8131c8111
