--- a/qa/kustomization.yaml
+++ b/qa/kustomization.yaml
@@ -7,3 +7,7 @@ patchesStrategicMerge:
 
 resources:
 - ../base
+images:
+- name: demo
+  newName: mynamesandesh/argocd-demo
+  newTag: 42618e9f7edc1770b0f9cf21e14ba1e9eaadccb4
