--- a/prod/kustomization.yaml
+++ b/prod/kustomization.yaml
@@ -6,3 +6,7 @@ patchesStrategicMerge:
 - ./deployment-patch.yaml
 resources:
 - ../base
+images:
+- name: demo
+  newName: mynamesandesh/argocd-demo
+  newTag: 42618e9f7edc1770b0f9cf21e14ba1e9eaadccb4
