--- a/qa/kustomization.yaml
+++ b/qa/kustomization.yaml
@@ -1,13 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-
-patchesStrategicMerge:
-- ./deployment-patch.yaml
-
 resources:
 - ../base
-images:
-- name: demo
-  newName: mynamesandesh/argocd-demo
-  newTag: 42618e9f7edc1770b0f9cf21e14ba1e9eaadccb4
+
+commonLabels:
+  env: qa
