Publish new version

--- a/prod/kustomization.yaml
+++ b/prod/kustomization.yaml
@@ -5,5 +5,8 @@ resources:
 - ../base
 
 patchesStrategicMerge:
-- ./deployment-patch.yaml        
-
+- ./deployment-patch.yaml
+images:
+- name: demo
+  newName: mynamesandesh/argocd-demo
+  newTag: dde6b73b20951cedf5032bec3b4f07f9f6940ff4
