--- a/prod/kustomization.yaml
+++ b/prod/kustomization.yaml
@@ -6,3 +6,6 @@ resources:
 
 patchesStrategicMerge:
 - ./deployment-patch.yaml
+images:
+- name: mynamesandesh/argocd-demo
+  newTag: ea4a178b7b619c54e5eb2ce05f49144c1ba11ea7
