changes in qa folder

--- a/qa/kustomization.yaml
+++ b/qa/kustomization.yaml
@@ -4,6 +4,8 @@ kind: Kustomization
 resources:
 - ../base
 
+commonLabels:
+  env: qa
 images:
 - name: mynamesandesh/argocd-demo
   newTag: ea4a178b7b619c54e5eb2ce05f49144c1ba11ea7
