--- a/overlays/qa/kustomization.yaml
+++ b/overlays/qa/kustomization.yaml
@@ -12,3 +12,6 @@ images:
   newTag: 662660eb4005359e1373db579da02d7c578732bf
 - name: mynamesandesh/argocd-demo
   newTag: ea4a178b7b619c54e5eb2ce05f49144c1ba11ea7
+- name: nginx
+  newName: mynamesandesh/argocd-demo
+  newTag: 52027024bcfe7082dfaa8e133c4cdffe332e9b87
