--- a/overlays/prod/kustomization.yaml
+++ b/overlays/prod/kustomization.yaml
@@ -1,6 +1,9 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
 - ../../base
 
-commonLabels:
-  env: prod
-
+images:
+- name: my-app
+  newName: gcr.io/my-platform/my-app
