--- a/overlays/qa/kustomization.yaml
+++ b/overlays/qa/kustomization.yaml
@@ -1,11 +1,10 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
 - ../../base
 
-commonLabels:
-  env: qa
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
 images:
-- name: nginx
+- name: my-app
   newName: mynamesandesh/argocd-demo
-  newTag: 3eb990453acd45e66764fd868e287a7839497c4b
+  newTag: 0.0.1
