--- a/overlays/qa/kustomization.yaml
+++ b/overlays/qa/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
 
 images:
 - name: my-app
-  newName: mynamesandesh/argocd-demo
+  newName: docker.io/mynamesandesh/argocd-demo
   newTag: 819da29142ab281842a7f1a58dadd2aac4063fae
